[package]
name = "corvus-preflight"
version = "0.1.0"
edition = "2021"

[dependencies]
graphics = { path = "../../graphics_wgpu" }
egui = "^0.19.0"

pc_interface_shared = { path = "../pc-interface-shared" }
anyleaf_usb = { path = "../anyleaf_usb" }

lin-alg2 = { path = "../../lin_alg"}
# To parse enums from their integer repr
num_enum = { version = "^0.5.7", default_features = false }


